# healing

./: .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
doctors/: admin.py  models.py  urls.py  views.py
doctors/migrations/: 0001_initial.py
doctors/templates/: doctor_register.html
healing/: asgi.py  settings.py  urls.py  wsgi.py
schemas/: base.py  doctor.py  user.py
templates/: base.html
templates/static/doctors/css/: doctor_register.css
templates/static/geral/css/: base.css
templates/static/global/css/: base.css
templates/static/users/css/: users.css
users/: urls.py  views.py
users/management/commands/: clear_users.py
users/templates/: login.html  register.html
usuarios/: urls.py  views.py
usuarios/templates/: cadastro.html
