[tool.poetry]
name = "healing"
version = "0.1.0"
description = ""
authors = ["Mauricio Benjamin da Rocha <mauriciobenjamin700@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.4"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
