[tool.poetry]
name = "healing"
version = "0.1.0"
description = ""
authors = ["Mauricio Benjamin <mauriciobenjamin700@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
pillow = "^10.4.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
